projects/compiler/test/typechecker/match/error_exhaustive_after_else.out
Error at %TEST_DIR%/typechecker/match/error_exhaustive_after_else.abra:3:3
Unreachable match case
  |    else => "efgh"
       ^
The previous case(s) cover all possibilities for match target type 'Int'
