projects/compiler/test/typechecker/match/error_exhaustive_after_else.abra
val x = match 123 {
  else => "abcd",
  else => "efgh"
}
